--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Flask==3.0.0
-flask-cors==4.0.0
-gunicorn==21.2.0
-PyPDF2==3.0.1
-python-docx==1.1.0
-pytesseract==0.3.10
-Pillow==10.1.0
-sentence-transformers==2.2.2
-numpy==1.24.3
-scikit-learn==1.3.2
-gTTS==2.4.0
-torch==2.1.0
-transformers==4.35.2
+Flask
+flask-cors
+gunicorn
+PyPDF2
+python-docx
+pytesseract
+Pillow
+sentence-transformers
+numpy
+scikit-learn
+gTTS
+torch
+transformers
